// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingLogo is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingLogo euiLoadingLogo--medium testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`EuiLoadingLogo logo is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingLogo euiLoadingLogo--medium testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoElastic"
    />
  </span>
</span>
`;

exports[`EuiLoadingLogo size l is rendered 1`] = `
<span
  class="euiLoadingLogo euiLoadingLogo--large"
>
  <span
    class="euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`EuiLoadingLogo size m is rendered 1`] = `
<span
  class="euiLoadingLogo euiLoadingLogo--medium"
>
  <span
    class="euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`EuiLoadingLogo size xl is rendered 1`] = `
<span
  class="euiLoadingLogo euiLoadingLogo--xLarge"
>
  <span
    class="euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;
